[gd_scene load_steps=2 format=3 uid="uid://bjy1xnxblu6qu"]

[ext_resource type="Script" uid="uid://dpmnadosh314l" path="res://src/stages/end_scene/player_end_score.gd" id="1_y5afu"]

[node name="PlayerScoreGraph" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_y5afu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="OuterPanel" type="ColorRect" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
color = Color(1, 0.894118, 0.470588, 1)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="InnerPanel" type="ColorRect" parent="MarginContainer/MarginContainer"]
layout_mode = 2
color = Color(0.196078, 0.160784, 0.278431, 1)

[node name="ScoreLabel" type="Label" parent="MarginContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"HeaderLarge"
text = "score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0

[node name="ColorRect" type="ColorRect" parent="MarginContainer2"]
layout_mode = 2
color = Color(0.196078, 0.160784, 0.278431, 1)

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer2"]
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"MainPanel"

[node name="PlayerLabel" type="Label" parent="MarginContainer2/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_type_variation = &"BigText"
text = "player"
horizontal_alignment = 1
vertical_alignment = 1
